// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
<img
  alt="image"
  class=""
  src="https://placehold.it/500x500"
/>
`;

exports[`it works with styles 1`] = `
.c0 {
  width: 50%;
}

<img
  alt="image"
  class="c0"
  src="https://placehold.it/500x500"
/>
`;
